--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Get.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Get.cshtml
@@ -37,23 +37,23 @@
                     var operations = Model.GetOperationsByAccountLegalEntityId(accountLegalEntity.Id);
                     
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell">@accountLegalEntity.Name</td>
+                        <td class="govuk-table__cell das-table__cell--vertical-align-top">@accountLegalEntity.Name</td>
                         <td class="govuk-table__cell">
                             @if (operations.Any())
                             {
-                                <ul>
-                                    @foreach (var operation in operations)
-                                    {
-                                        <li>@operation.GetDescription()</li>
-                                    }
-                                </ul>
+                            <ul class="govuk-list das-list--comma-after govuk-body govuk-!-margin-bottom-0">
+                                @foreach (var operation in operations)
+                                {
+                                    <li>@operation.GetDescription()</li>
+                                }
+                            </ul>
                             }
                             else
                             {
                                 @:No permissions set
                             }
                         </td>
-                        <td class="govuk-table__cell"><a href="@Url.Action("Get", "AccountProviderLegalEntities", new GetAccountProviderLegalEntityRouteValues { AccountProviderId = Model.AccountProvider.Id, AccountLegalEntityId = accountLegalEntity.Id })">Set permissions</a></td>
+                        <td class="govuk-table__cell das-table__cell--vertical-align-top"><a href="@Url.Action("Get", "AccountProviderLegalEntities", new GetAccountProviderLegalEntityRouteValues { AccountProviderId = Model.AccountProvider.Id, AccountLegalEntityId = accountLegalEntity.Id })">Set permissions</a></td>
                     </tr>
                 }
             </tbody>
