Fixed a bug where the link text for viewing a provider could be incorrect on the account providers page

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
@@ -7,13 +7,13 @@
 
 @section breadcrumb
 {
-    @if (Model.AccountLegalEntitiesCount > 1)
+    @if (Model.AccountLegalEntitiesCount == 1)
     {
-        <a class="govuk-back-link" href="@Url.Action("Get", "AccountProviders", new GetAccountProviderRouteValues { AccountProviderId = Model.AccountProvider.Id })">Back</a>
+        <a class="govuk-back-link" href="@Url.Action("Index", "AccountProviders")">Back</a>
     }
     else
     {
-        <a class="govuk-back-link" href="@Url.Action("Index", "AccountProviders")">Back</a>
+        <a class="govuk-back-link" href="@Url.Action("Get", "AccountProviders", new GetAccountProviderRouteValues { AccountProviderId = Model.AccountProvider.Id })">Back</a>
     }
 }
 
