--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Update.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Update.cshtml
@@ -15,9 +15,9 @@
         <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">Confirm training provider permissions</h1>
     </div>
     <div class="govuk-grid-column-two-thirds">
-        <h2 class="govuk-heading-l">
+        <h2 class="govuk-heading-l govuk-!-margin-bottom-6">
             @Model.AccountProvider.ProviderName
-            <span class="govuk-caption-m govuk-!-font-weight-bold govuk-!-margin-bottom-8">UKPRN @Model.AccountProvider.ProviderUkprn</span>
+            <span class="govuk-caption-m">UKPRN @Model.AccountProvider.ProviderUkprn</span>
         </h2>
         <table class="govuk-table govuk-!-font-size-19">
             <thead class="govuk-table__head">
