--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Add.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Add.cshtml
@@ -15,9 +15,9 @@
     </div>
     <div class="govuk-grid-column-two-thirds">
         <p class="govuk-body govuk-!-margin-bottom-6">UK Provider Reference Number <span class="govuk-!-font-weight-bold">'@Model.Provider.Ukprn'</span> matches:</p>
-        <h2 class="govuk-heading-l">
+        <h2 class="govuk-heading-l govuk-!-margin-bottom-8">
             @Model.Provider.Name
-            <span class="govuk-caption-m govuk-!-font-weight-bold govuk-!-margin-bottom-8">UKPRN @Model.Provider.Ukprn</span>
+            <span class="govuk-caption-m">UKPRN @Model.Provider.Ukprn</span>
         </h2>
         @using (Html.BeginForm())
         {
