--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
@@ -23,7 +23,10 @@
     </div>
     <div class="govuk-grid-column-two-thirds">  
         <p class="govuk-body">Set permissions for what you want training providers to do on your behalf. You can select from those you've previously worked with, or find a new one.</p>
-        <a class="govuk-button" href="@Url.Action("Find")" role="button">Add a new training provider</a>
+        @if (Html.IsAuthorized(EmployerUserRole.Owner))
+        {
+            <a class="govuk-button" href="@Url.Action("Find")" role="button">Add a new training provider</a>
+        }
     </div>
     <div class="govuk-grid-column-full">
         <h2 class="govuk-heading-m govuk-!-margin-top-9">Your training providers</h2>
@@ -65,7 +68,7 @@
                             </td>
                             <td class="govuk-table__cell">
                                 <a href="@Url.Action("Get", new GetAccountProviderRouteValues { AccountProviderId = accountProvider.Id })">
-                                    @if (Model.AccountLegalEntitiesCount == 1)
+                                    @if (Model.AccountLegalEntitiesCount == 1 && Html.IsAuthorized(EmployerUserRole.Owner))
                                     {
                                         @:Set permissions
                                     }
