--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
@@ -23,7 +23,7 @@
     </div>
     <div class="govuk-grid-column-two-thirds">  
         <p class="govuk-body">Set permissions for what you want training providers to do on your behalf. You can select from those you've previously worked with, or find a new one.</p>
-        @if (Html.IsAuthorized(EmployerUserRole.Owner))
+        @if (Model.IsAddProviderOperationAuthorized)
         {
             <a class="govuk-button" href="@Url.Action("Find")" role="button">Add a new training provider</a>
         }
@@ -68,7 +68,7 @@
                             </td>
                             <td class="govuk-table__cell">
                                 <a href="@Url.Action("Get", new GetAccountProviderRouteValues { AccountProviderId = accountProvider.Id })">
-                                    @if (Model.AccountLegalEntitiesCount == 1 && Html.IsAuthorized(EmployerUserRole.Owner))
+                                    @if (Model.AccountLegalEntitiesCount == 1 && Model.IsUpdatePermissionsOperationAuthorized)
                                     {
                                         @:Set permissions
                                     }
