--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
@@ -65,7 +65,10 @@
                                     <a href="/" role="menuitem" class="menu-main">Settings</a>
                                     <ul role="menu" id="settings-menu" class="js-hidden">
                                         <li><a href="@Html.EmployerUrls().YourAccounts()" class="sub-menu-item" role="menuitem">Your accounts</a></li>
-                                        <li><a href="@Html.EmployerUrls().RenameAccount()" class="sub-menu-item">Rename account</a></li>
+                                        @if (ViewContext.RouteData.Values.ContainsKey(RouteValueKeys.AccountHashedId))
+                                        {
+                                            <li><a href="@Html.EmployerUrls().RenameAccount()" class="sub-menu-item">Rename account</a></li>
+                                        }
                                         <li><a href="@Html.EmployerUrls().ChangePassword()" class="sub-menu-item">Change your password</a></li>
                                         <li><a href="@Html.EmployerUrls().ChangeEmail()" class="sub-menu-item">Change your email address</a></li>
                                         <li><a href="@Html.EmployerUrls().NotificationSettings()" class="sub-menu-item">Notifications settings</a></li>
@@ -82,7 +85,7 @@
                 </div>
             </div>
         </div>
-        @if (Context.User.Identity.IsAuthenticated)
+        @if (Context.User.Identity.IsAuthenticated && ViewContext.RouteData.Values.ContainsKey(RouteValueKeys.AccountHashedId))
         {
             <div class="header-organisation" role="navigation">
                 <nav class="header-inner">
