Updated account providers and account provider page to not render table column if its content is not rendered

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
@@ -41,7 +41,10 @@
                     <tr class="govuk-table__row">
                         <th class="govuk-table__header">Training providers</th>
                         <th class="govuk-table__header">Permissions</th>
-                        <th class="govuk-table__header"></th>
+                        @if (Model.IsUpdatePermissionsOperationAuthorized || Model.AccountProviders.Any(ap => ap.AccountProviderLegalEntitiesWithPermissionsCount > 0))
+                        {
+                            <th class="govuk-table__header"></th>
+                        }
                     </tr>
                 </thead>
                 <tbody class="govuk-table__body">
@@ -66,18 +69,21 @@
                                     }
                                 }
                             </td>
-                            <td class="govuk-table__cell">
-                                <a href="@Url.Action("Get", new GetAccountProviderRouteValues { AccountProviderId = accountProvider.Id })">
-                                    @if (Model.AccountLegalEntitiesCount == 1 && Model.IsUpdatePermissionsOperationAuthorized)
-                                    {
-                                        @:Set permissions
-                                    }
-                                    else
-                                    {
-                                        @:View
-                                    }
-                                </a>
-                            </td>
+                            @if (Model.IsUpdatePermissionsOperationAuthorized || accountProvider.AccountProviderLegalEntitiesWithPermissionsCount > 0)
+                            {
+                                <td class="govuk-table__cell">
+                                    <a href="@Url.Action("Get", new GetAccountProviderRouteValues { AccountProviderId = accountProvider.Id })">
+                                        @if (Model.IsUpdatePermissionsOperationAuthorized && Model.AccountLegalEntitiesCount == 1)
+                                        {
+                                            @:Set permissions
+                                        }
+                                        else
+                                        {
+                                            @:View
+                                        }
+                                    </a>
+                                </td>
+                            }
                         </tr>
                     }
                 </tbody>
