--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Get.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Get.cshtml
@@ -16,66 +16,51 @@
             @Model.AccountProvider.ProviderName
             <span class="govuk-caption-m">UKPRN @Model.AccountProvider.ProviderUkprn</span>
         </h1>
-        
     </div>
-</div>
-<div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <p class="govuk-body">Set permissions for a single organisation, or set the same permissions for all your organisations at the same time.</p>
     </div>
-</div>
-
-<div class="govuk-grid-row">
-    @if (Model.IsUpdatePermissionsOperationAuthorized)
-    {
-        @:<div class="govuk-grid-column-two-thirds">
-    }
-    else
-    {
-        @:<div class="govuk-grid-column-one-half">
-    }
-
-    <table class="govuk-table govuk-!-font-size-19">
-        <thead class="govuk-table__head">
-            <tr class="govuk-table__row">
-                <th class="govuk-table__header">Your organisations</th>
-                <th class="govuk-table__header">Permissions</th>
-                @if (Model.IsUpdatePermissionsOperationAuthorized)
-                {
-                    <th class="govuk-table__header"></th>
-                }
-
-            </tr>
-        </thead>
-        <tbody class="govuk-table__body">
-            @foreach (var accountLegalEntity in Model.AccountProvider.AccountLegalEntities)
-            {
+    <div class="@(Model.IsUpdatePermissionsOperationAuthorized ? "govuk-grid-column-two-thirds" : "govuk-grid-column-one-half")">
+        <table class="govuk-table govuk-!-font-size-19">
+            <thead class="govuk-table__head">
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell das-table__cell--vertical-align-top">@accountLegalEntity.Name</td>
-                    <td class="govuk-table__cell">
-                        @if (accountLegalEntity.Operations.Any())
-                        {
-                            <ul class="govuk-list das-list--comma-after govuk-body govuk-!-margin-bottom-0">
-                                @foreach (var operation in accountLegalEntity.Operations)
-                                {
-                                    <li>@operation.GetDescription()</li>
-                                }
-                            </ul>
-                        }
-                        else
-                        {
-                            @:No permissions set
-                        }
-                    </td>
+                    <th class="govuk-table__header">Your organisations</th>
+                    <th class="govuk-table__header">Permissions</th>
                     @if (Model.IsUpdatePermissionsOperationAuthorized)
                     {
-                        <td class="govuk-table__cell das-table__cell--vertical-align-top">
-                            <a href="@Url.Action("Get", "AccountProviderLegalEntities", new GetAccountProviderLegalEntityRouteValues { AccountProviderId = Model.AccountProvider.Id, AccountLegalEntityId = accountLegalEntity.Id })">Set permissions</a>
-                        </td>
+                        <th class="govuk-table__header"></th>
                     }
                 </tr>
-            }
-        </tbody>
-    </table>
-</div>
+            </thead>
+            <tbody class="govuk-table__body">
+                @foreach (var accountLegalEntity in Model.AccountProvider.AccountLegalEntities)
+                {
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell das-table__cell--vertical-align-top">@accountLegalEntity.Name</td>
+                        <td class="govuk-table__cell">
+                            @if (accountLegalEntity.Operations.Any())
+                            {
+                                <ul class="govuk-list das-list--comma-after govuk-body govuk-!-margin-bottom-0">
+                                    @foreach (var operation in accountLegalEntity.Operations)
+                                    {
+                                        <li>@operation.GetDescription()</li>
+                                    }
+                                </ul>
+                            }
+                            else
+                            {
+                                @:No permissions set
+                            }
+                        </td>
+                        @if (Model.IsUpdatePermissionsOperationAuthorized)
+                        {
+                            <td class="govuk-table__cell das-table__cell--vertical-align-top">
+                                <a href="@Url.Action("Get", "AccountProviderLegalEntities", new GetAccountProviderLegalEntityRouteValues { AccountProviderId = Model.AccountProvider.Id, AccountLegalEntityId = accountLegalEntity.Id })">Set permissions</a>
+                            </td>
+                        }
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </div>
