--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
@@ -119,7 +119,7 @@
                                 </a>
                             </li>
                             <li class="govuk-footer__inline-list-item">
-                                <a class="govuk-footer__link" href="https://www.surveymonkey.co.uk/r/2JPLQ9T">
+                                <a class="govuk-footer__link" href="https://www.smartsurvey.co.uk/s/apprenticeshipservicefeedback/">
                                     Feedback
                                 </a>
                             </li>
@@ -129,7 +129,7 @@
                                 </a>
                             </li>
                             <li class="govuk-footer__inline-list-item">
-                                Built by the <a href="http://gov.uk/sfa" target="_blank" class="govuk-footer__link">Education and Skills Funding Agency</a>
+                                Built by the <a href="http://gov.uk/esfa" target="_blank" class="govuk-footer__link">Education and Skills Funding Agency</a>
                             </li>
                         </ul>
                         <svg role="presentation" focusable="false" class="govuk-footer__licence-logo" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 483.2 195.7" height="17" width="41">
