--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
@@ -1,4 +1,5 @@
 @using SFA.DAS.ProviderRelationships.Web.RouteValues.AccountProviders
+@using SFA.DAS.ProviderRelationships.Types.Models
 @model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviderLegalEntities.GetAccountProviderLegalEntityViewModel
 
 @{
@@ -40,35 +41,104 @@
                 <tbody class="govuk-table__body">
                     @for (var i = 0; i < Model.Operations.Count; i++)
                     {
-                        <tr class="govuk-table__row">
-                            <td class="govuk-table__cell">
-                                @Html.HiddenFor(m => m.Operations[i].Value)
-                                @Model.Operations[i].Value.GetDescription()
-                            </td>
-                            <td class="govuk-table__cell">
-                                <div class="govuk-form-group govuk-!-margin-bottom-0 govuk-!-margin-top-2">
-                                    <fieldset class="govuk-fieldset das-permissions-fieldset--float-right">
-                                        <div class="govuk-radios govuk-radios--inline">
-                                            <div class="govuk-radios__item">
-                                                @Html.RadioButtonFor(m => m.Operations[i].IsEnabled, true, new { id = $"operation-{i}-yes", @class = "govuk-radios__input" })
-                                                <label class="govuk-label govuk-radios__label" for="operation-@i-yes">
-                                                    Yes
-                                                </label>
+                        var isRecruitmentPermission = Model.Operations[i].Value.Equals(Operation.Recruitment);
+
+                        if (isRecruitmentPermission == false)
+                        {
+                            <tr class="govuk-table__row">
+                                <td class="govuk-table__cell">
+                                    @Html.HiddenFor(m => m.Operations[i].Value)
+                                    @Model.Operations[i].Value.GetDescription()
+                                </td>
+                                <td class="govuk-table__cell">
+                                    <div class="govuk-form-group govuk-!-margin-bottom-0 govuk-!-margin-top-2">
+                                        <fieldset class="govuk-fieldset das-permissions-fieldset--float-right">
+                                            <div class="govuk-radios govuk-radios--conditional govuk-radios--inline" data-module="radios">
+                                                <div class="govuk-radios__item">
+                                                    @Html.RadioButtonFor(m => m.Operations[i].IsEnabled, true, new { id = $"operation-{i}-yes", @class = "govuk-radios__input" })
+                                                    <label class="govuk-label govuk-radios__label" for="operation-@i-yes">
+                                                        Yes
+                                                    </label>
+                                                </div>
+                                                <div class="govuk-radios__item">
+                                                    @Html.RadioButtonFor(m => m.Operations[i].IsEnabled, false, new { id = $"operation-{i}-no", @class = "govuk-radios__input" })
+                                                    <label class="govuk-label govuk-radios__label" for="operation-@i-no">
+                                                        No
+                                                    </label>
+                                                </div>
                                             </div>
-                                            <div class="govuk-radios__item">
-                                                @Html.RadioButtonFor(m => m.Operations[i].IsEnabled, false, new { id = $"operation-{i}-no", @class = "govuk-radios__input" })
-                                                <label class="govuk-label govuk-radios__label" for="operation-@i-no">
-                                                    No
-                                                </label>
+                                        </fieldset>
+                                    </div>
+                                </td>
+                            </tr>
+                        }
+
+                        if (isRecruitmentPermission)
+                        {
+                            <tr class="govuk-table__row">
+                                <td>
+                                    @Html.HiddenFor(m => m.Operations[i].Value)
+                                    @Model.Operations[i].Value.GetDescription()
+                                </td>
+                                <td>
+                                    <div class="govuk-form-group govuk-!-margin-bottom-0 govuk-!-margin-top-2">
+                                        <fieldset class="govuk-fieldset das-permissions-fieldset--float-right">
+                                            <div class="govuk-radios govuk-radios--conditional govuk-radios--inline" data-module="radios">
+                                                <div class="govuk-radios__item">
+                                                    @Html.RadioButtonFor(m => m.Operations[i].IsEnabled, true, new { id = $"operation-{i}-yes", @class = "govuk-radios__input" })
+                                                    <label class="govuk-label govuk-radios__label" for="operation-@i-yes">
+                                                        Yes
+                                                    </label>
+                                                </div>
+                                                <div class="govuk-radios__item">
+                                                    @Html.RadioButtonFor(m => m.Operations[i].IsEnabled, false, new { id = $"operation-{i}-no", @class = "govuk-radios__input" })
+                                                    <label class="govuk-label govuk-radios__label" for="operation-@i-no">
+                                                        No
+                                                    </label>
+                                                </div>
                                             </div>
+                                        </fieldset>
+                                    </div>
+                                </td>
+                            </tr>
+                            if (Model.Operations[i].IsEnabled)
+                            {
+                                <tr>
+                                    <td class="govuk-table__cell" colspan="2">
+                                        <div class="govuk-inset-text govuk-!-margin-top-0 govuk-!-margin-bottom-2">
+                                            <p>
+                                                If you choose ‘No’, the training provider will no longer be able to recruit on your behalf.
+                                            </p>
+                                            <p>
+                                                All vacancies previously created by the provider will remain with them, to transfer vacancies back to you, contact us at <a href="mailto:VacancyServices.RAA@education.gov.uk">VacancyServices.RAA@education.gov.uk</a>
+                                            </p>
                                         </div>
-                                    </fieldset>
-                                </div>
-                            </td>
-                        </tr>
+                                    </td>
+                                </tr>
+                            }
+
+                            if (Model.Operations[i].IsEnabled == false)
+                            {
+                                <tr>
+                                    <td class="govuk-table__cell" colspan="2">
+                                        <div class="govuk-inset-text govuk-!-margin-top-0 govuk-!-margin-bottom-2">
+                                            <p>
+                                                Currently, only training providers that are part of beta testing can recruit apprentices.
+                                            </p>
+                                            <p>
+                                                Contact your provider if you’re unsure.
+                                            </p>
+                                        </div>
+                                    </td>
+                                </tr>
+                            }
+                        }
                     }
                 </tbody>
             </table>
+
+
+
             <button class="govuk-button" type="submit">Set permissions</button>
         }
     </div>
