ER-1360 - Amending permission page for recruit notices when dealing with a blocked provider and revoking recruitment permission

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Get.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Get.cshtml
@@ -55,7 +55,7 @@
                         @if (Model.IsUpdatePermissionsOperationAuthorized)
                         {
                             <td class="govuk-table__cell das-table__cell--vertical-align-top">
-                                <a href="@Url.Action("Get", "AccountProviderLegalEntities", new GetAccountProviderLegalEntityRouteValues { AccountProviderId = Model.AccountProvider.Id, AccountLegalEntityId = accountLegalEntity.Id })">Set permissions</a>
+                                <a href="@Url.Action("Get", "AccountProviderLegalEntities", new GetAccountProviderLegalEntityRouteValues { AccountHashedId = Model.AccountHashedId, AccountProviderId = Model.AccountProvider.Id, AccountLegalEntityId = accountLegalEntity.Id })">Set permissions</a>
                             </td>
                         }
                     </tr>
