--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
@@ -152,5 +152,6 @@
         @*<script>
             window.GOVUKFrontend.initAll()
         </script>*@
+        @RenderSection("footerJS", required: false)
     </body>
 </html>
