--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
@@ -4,6 +4,9 @@
 
 @{
     ViewBag.Title = Model.AccountLegalEntity.Name;
+    var recruitmentNoOptionId = string.Empty;
+    const string RecruitmentNoBlurbId = "recruitmentNoBlurb";
+    var hasRecruitmentPermissionPreviouslyBeenSet = false;
 }
 
 @section breadcrumb
@@ -14,7 +17,7 @@
     }
     else
     {
-        <a class="govuk-back-link" href="@Url.Action("Get", "AccountProviders", new GetAccountProviderRouteValues { AccountProviderId = Model.AccountProvider.Id })">Back</a>
+        <a class="govuk-back-link" href="@Url.Action("Get", "AccountProviders", new GetAccountProviderRouteValues { AccountHashedId = Model.AccountHashedId, AccountProviderId = Model.AccountProvider.Id })">Back</a>
     }
 }
 
@@ -42,6 +45,10 @@
                     @for (var i = 0; i < Model.Operations.Count; i++)
                     {
                         var isRecruitmentPermission = Model.Operations[i].Value.Equals(Operation.Recruitment);
+                        hasRecruitmentPermissionPreviouslyBeenSet = Model.Operations[i].IsEnabled;
+                        var recruitmentCountCaption = Model.NoOfProviderCreatedVacancies > 0
+                                                        ? Model.NoOfProviderCreatedVacancies.ToString()
+                                                        : "Any";
 
                         if (isRecruitmentPermission == false)
                         {
@@ -75,6 +82,7 @@
 
                         if (isRecruitmentPermission)
                         {
+                            recruitmentNoOptionId = $"operation-{i}-no";
                             <tr class="govuk-table__row">
                                 <td>
                                     @Html.HiddenFor(m => m.Operations[i].Value)
@@ -82,64 +90,61 @@
                                 </td>
                                 <td>
                                     <div class="govuk-form-group govuk-!-margin-bottom-0 govuk-!-margin-top-2">
-                                        <fieldset class="govuk-fieldset das-permissions-fieldset--float-right">
-                                            <div class="govuk-radios govuk-radios--conditional govuk-radios--inline" data-module="radios">
-                                                <div class="govuk-radios__item">
-                                                    @if (Model.Operations[i].IsEnabled)
-                                                    {
-                                                        @Html.RadioButtonFor(m => m.Operations[i].IsEnabled, true, new { id = $"operation-{i}-yes", @class = "govuk-radios__input", aria_disabled = "true", disabled = "disabled" })
-                                                    }
-                                                    else
-                                                    {
+                                        @if (Model.IsProviderBlockedFromRecruit)
+                                        {
+                                            <strong>Not allowed</strong>
+                                        }
+                                        else
+                                        {
+                                            <fieldset class="govuk-fieldset das-permissions-fieldset--float-right">
+                                                <div class="govuk-radios govuk-radios--conditional govuk-radios--inline" data-module="radios">
+                                                    <div class="govuk-radios__item">
                                                         @Html.RadioButtonFor(m => m.Operations[i].IsEnabled, true, new { id = $"operation-{i}-yes", @class = "govuk-radios__input" })
-                                                    }
-
-                                                    <label class="govuk-label govuk-radios__label" for="operation-@i-yes">
-                                                        Yes
-                                                    </label>
+                                                        <label class="govuk-label govuk-radios__label" for="operation-@i-yes">
+                                                            Yes
+                                                        </label>
+                                                    </div>
+                                                    <div class="govuk-radios__item">
+                                                        @Html.RadioButtonFor(m => m.Operations[i].IsEnabled, false, new { id = recruitmentNoOptionId, @class = "govuk-radios__input" })
+                                                        <label class="govuk-label govuk-radios__label" for="operation-@i-no">
+                                                            No
+                                                        </label>
+                                                    </div>
                                                 </div>
-                                                <div class="govuk-radios__item">
-                                                    @if (Model.Operations[i].IsEnabled)
-                                                    {
-                                                        @Html.RadioButtonFor(m => m.Operations[i].IsEnabled, false, new { id = $"operation-{i}-no", @class = "govuk-radios__input", aria_disabled = "true", disabled = "disabled" })
-                                                    }
-                                                    else
-                                                    {
-                                                        @Html.RadioButtonFor(m => m.Operations[i].IsEnabled, false, new { id = $"operation-{i}-no", @class = "govuk-radios__input" })
-                                                    }
-                                                    <label class="govuk-label govuk-radios__label" for="operation-@i-no">
-                                                        No
-                                                    </label>
-                                                </div>
-                                            </div>
-                                        </fieldset>
+                                            </fieldset>
+                                        }
                                     </div>
                                 </td>
                             </tr>
-                            if (Model.Operations[i].IsEnabled)
+                            if (Model.IsProviderBlockedFromRecruit)
                             {
                                 <tr>
                                     <td class="govuk-table__cell" colspan="2">
                                         <div class="govuk-inset-text govuk-!-margin-top-0 govuk-!-margin-bottom-2">
                                             <p>
-                                                For support with removing permissions, contact us at <a href="mailto:vacancyservices.raa@education.gov.uk">vacancyservices.raa@education.gov.uk</a>
+                                                This provider has been stopped from recruiting apprentices on behalf of employers.
                                             </p>
                                         </div>
                                     </td>
                                 </tr>
                             }
-
-                            if (Model.Operations[i].IsEnabled == false)
+                            else
                             {
-                                <tr>
+                                <tr id="@RecruitmentNoBlurbId">
                                     <td class="govuk-table__cell" colspan="2">
                                         <div class="govuk-inset-text govuk-!-margin-top-0 govuk-!-margin-bottom-2">
                                             <p>
-                                                Currently, only training providers that are part of beta testing can recruit apprentices.
+                                                If you select no, @Model.AccountProvider.ProviderName will no longer be able to post vacancies, or manage apprentices on your behalf.
                                             </p>
-                                            <p>
-                                                Contact your provider if you're unsure.
-                                            </p>
+                                            <p>@recruitmentCountCaption vacancies the provider has created will be transferred to your account.</p>
+                                            <div class="govuk-warning-text">
+                                                <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+                                                <strong class="govuk-warning-text__text">
+                                                    <span class="govuk-warning-text__assistive">Warning</span>
+                                                    Live vacancies that have been transferred will be closed.
+                                                    Vacancies sent for review will be sent back to draft.
+                                                </strong>
+                                            </div>
                                         </div>
                                     </td>
                                 </tr>
@@ -149,9 +154,33 @@
                 </tbody>
             </table>
 
-
-
             <button class="govuk-button" type="submit">Set permissions</button>
         }
     </div>
 </div>
+@section footerJS
+{
+    @if (Model.IsProviderBlockedFromRecruit == false)
+    {
+    <script>
+        $(function() {
+            var $recruitmentNoBlurb = $('#@RecruitmentNoBlurbId'),
+                $recruitmentNoOption = $('#@recruitmentNoOptionId').first();
+
+            $recruitmentNoBlurb.hide();
+
+            @if (hasRecruitmentPermissionPreviouslyBeenSet)
+            {
+                <text>
+                $recruitmentNoOption.change(function (e) {
+                    console.log(e); // check what is in this eventData object
+                    if ($recruitmentNoOption.prop("checked")) {
+                        $recruitmentNoBlurb.show();
+                    }
+                });
+                </text>
+            }
+        });
+    </script>
+    }
+}
