ER-1360 - styling changes to accommodate additional recruitment permission content.

--- a/src/SFA.DAS.ProviderRelationships.Web/Content/css/application.css
+++ b/src/SFA.DAS.ProviderRelationships.Web/Content/css/application.css
@@ -653,3 +653,7 @@ li.menu-link.sub-menu-open ul {
 .das-list--comma-after li:last-child:after {
     content: "";
 }
+
+.das-warning-text__icon {
+    margin-top:-20px !important;
+}
