--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
@@ -59,8 +59,8 @@
                                 </td>
                                 <td class="govuk-table__cell">
                                     <div class="govuk-form-group govuk-!-margin-bottom-0 govuk-!-margin-top-2">
-                                        <fieldset class="govuk-fieldset das-permissions-fieldset--float-right">
-                                            <div class="govuk-radios govuk-radios--conditional govuk-radios--inline" data-module="radios">
+                                        <fieldset class="govuk-fieldset">
+                                            <div class="govuk-radios govuk-radios--inline" data-module="radios">
                                                 <div class="govuk-radios__item">
                                                     @Html.RadioButtonFor(m => m.Operations[i].IsEnabled, true, new { id = $"operation-{i}-yes", @class = "govuk-radios__input" })
                                                     <label class="govuk-label govuk-radios__label" for="operation-@i-yes">
@@ -84,11 +84,11 @@
                         {
                             recruitmentNoOptionId = $"operation-{i}-no";
                             <tr class="govuk-table__row">
-                                <td>
+                                <td class="govuk-table__cell">
                                     @Html.HiddenFor(m => m.Operations[i].Value)
                                     @Model.Operations[i].Value.GetDescription()
                                 </td>
-                                <td>
+                                <td class="govuk-table__cell">
                                     <div class="govuk-form-group govuk-!-margin-bottom-0 govuk-!-margin-top-2">
                                         @if (Model.IsProviderBlockedFromRecruit)
                                         {
@@ -96,8 +96,8 @@
                                         }
                                         else
                                         {
-                                            <fieldset class="govuk-fieldset das-permissions-fieldset--float-right">
-                                                <div class="govuk-radios govuk-radios--conditional govuk-radios--inline" data-module="radios">
+                                            <fieldset class="govuk-fieldset">
+                                                <div class="govuk-radios govuk-radios--inline" data-module="radios">
                                                     <div class="govuk-radios__item">
                                                         @Html.RadioButtonFor(m => m.Operations[i].IsEnabled, true, new { id = $"operation-{i}-yes", @class = "govuk-radios__input" })
                                                         <label class="govuk-label govuk-radios__label" for="operation-@i-yes">
@@ -121,7 +121,7 @@
                                 <tr>
                                     <td class="govuk-table__cell" colspan="2">
                                         <div class="govuk-inset-text govuk-!-margin-top-0 govuk-!-margin-bottom-2">
-                                            <p>
+                                            <p class="govuk-body">
                                                 This provider has been stopped from recruiting apprentices on behalf of employers.
                                             </p>
                                         </div>
@@ -133,12 +133,12 @@
                                 <tr id="@RecruitmentNoBlurbId">
                                     <td class="govuk-table__cell" colspan="2">
                                         <div class="govuk-inset-text govuk-!-margin-top-0 govuk-!-margin-bottom-2">
-                                            <p>
+                                            <p class="govuk-body">
                                                 If you select no, @Model.AccountProvider.ProviderName will no longer be able to post vacancies, or manage apprentices on your behalf.
                                             </p>
-                                            <p>@recruitmentCountCaption vacancies the provider has created will be transferred to your account.</p>
+                                            <p class="govuk-body">@recruitmentCountCaption vacancies the provider has created will be transferred to your account.</p>
                                             <div class="govuk-warning-text">
-                                                <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+                                                <span class="govuk-warning-text__icon das-warning-text__icon" aria-hidden="true">!</span>
                                                 <strong class="govuk-warning-text__text">
                                                     <span class="govuk-warning-text__assistive">Warning</span>
                                                     Live vacancies that have been transferred will be closed.
