ER-1360 - Removing temp JS code and correcting uri to provider status endpoint in DasRecruit Recruit API service.

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
@@ -172,8 +172,7 @@
             @if (hasRecruitmentPermissionPreviouslyBeenSet)
             {
                 <text>
-                $recruitmentNoOption.change(function (e) {
-                    console.log(e); // check what is in this eventData object
+                $recruitmentNoOption.change(function () {
                     if ($recruitmentNoOption.prop("checked")) {
                         $recruitmentNoBlurb.show();
                     }
