--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Update.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Update.cshtml
@@ -7,7 +7,7 @@
 
 @section breadcrumb
 {
-    <a class="govuk-back-link" href="@Url.Action("Get", new GetAccountProviderLegalEntityRouteValues { AccountHashedId = Model.AccountHashedId, AccountProviderId = Model.AccountProvider.Id, AccountLegalEntityId = Model.AccountLegalEntity.Id })">Back</a>
+    <a class="govuk-back-link" href="@Url.Action("Get", new GetAccountProviderLegalEntityRouteValues { AccountProviderId = Model.AccountProvider.Id, AccountLegalEntityId = Model.AccountLegalEntity.Id })">Back</a>
 }
 
 <div class="govuk-grid-row">
