--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
@@ -23,7 +23,7 @@
         <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">Set permissions</h1>
     </div>
     <div class="govuk-grid-column-two-thirds">
-        <p class="govuk-body">Set permissions for @Model.AccountProvider.ProviderName to do tasks on behalf of @Model.AccountLegalEntity.Name?</p>
+        <p class="govuk-body">You can allow @Model.AccountProvider.ProviderName to do tasks on your behalf, this can include creating vacancies, reserving funding and adding apprentice records.</p>
     </div>
 </div>
 <div class="govuk-grid-row">
