AML-3821 Content update

--- a/src/SFA.DAS.ProviderRegistrations.Web/Views/Registration/InviteConfirmation.cshtml
+++ b/src/SFA.DAS.ProviderRegistrations.Web/Views/Registration/InviteConfirmation.cshtml
@@ -25,7 +25,7 @@
                     </legend>
                     @if (inError)
                     {
-                        <span class="field-validation-error govuk-error-message">Please select an option</span>
+                        <span class="field-validation-error govuk-error-message">Please select an option to continue</span>
                     }
                     <div class="govuk-radios">
                         <div class="govuk-radios__item">
